--- a/hindi-home.html
+++ b/hindi-home.html
@@ -25,7 +25,7 @@
     <div class="panel panel-left panel-reveal">
 			<nav class="sidebar-nav">
 			<ul>
-			<li><a href="english-home.html" class="close-panel"><img src="images/icons/red/home.png" alt="" title="" /><span>Home</span></a></li>
+			<li><a href="hin-high-exhaust-system-temperature" class="close-panel"><img src="images/icons/red/home.png" alt="" title="" /><span>Home</span></a></li>
         <li><a href="english-what-is-obstetric-fistula.html" class="close-panel"><img src="images/icons/red/what.png" alt="" title="" /><span>What is Obstetric Fistula ?</span></a></li>
         <li><a href="english-types-of-obstetric-fistula.html" class="close-panel"><img src="images/icons/red/types.png" alt="" title="" /><span>Types of Obstetric Fistula</span></a></li>
         <li><a href="english-symptoms-of-obstetric-fistula.html" class="close-panel"><img src="images/icons/red/symptoms.png" alt="" title="" /><span>Symptoms of Obstetric Fistula</span></a></li>
@@ -85,8 +85,9 @@
 			
 			<nav class="main-nav">
 			<ul>
-			<li class="navbg1"><a href="#" class="navbgtransblue"><img src="images/icons/white/high.png" alt="" title="" /><span>High Exhaust System Temperature</span></a></li>
-			<li class="navbg20"><a href="#" class="navbgtransgreen"><img src="images/icons/white/inhibit.png" alt="" title="" /><span>DPF regeneration inhibit<br><br></span></a></li>
+			<li class="navbg1"><a href="hin-high-exhaust-system-temperature.html" class="navbgtransblue"><img src="images/icons/white/high.png" alt="" title="" /><span>उच्च निकास प्रणाली तापमान
+</span></a></li>
+			<li class="navbg20"><a href="#" class="navbgtransgreen"><img src="images/icons/white/inhibit.png" alt="" title="" /><span>DPF regeneration inhibit</span></a></li>
 
       <li class="navbg2"><a href="#l" class="navbgtransblack"><img src="images/icons/white/dpf.png" alt="" title="" /><span>DPF Lamp (Regen needed)</span></a></li>
       <li class="navbg3"><a href="#" class="navbgtransred"><img src="images/icons/white/low.png" alt="" title="" /><span>Low AdBlue warning</span></a></li>
