--- a/eng-high-exhaust-system-temperature.html
+++ b/eng-high-exhaust-system-temperature.html
@@ -107,7 +107,7 @@ heavy traffic immediately<br>
 
 
 
-<audio controls>
+<audio controls autoplay>
  <source src="horse.ogg" type="audio/ogg">
  <source src="http://ccmixter.org/content/hansatom/hansatom_-_Paint_the_Sky.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
